--- a/app/src/main/res/layout/content_ecran_quizz.xml
+++ b/app/src/main/res/layout/content_ecran_quizz.xml
@@ -31,7 +31,8 @@
         android:layout_below="@+id/editText"
         android:layout_marginTop="98dp"
         android:layout_marginLeft="-50dp"
-        android:text="@string/rep1" />
+        android:text="@string/rep1"
+        android:onClick="onClick"/>
 
     <Button
         android:id="@+id/button2"
@@ -40,7 +41,8 @@
         android:layout_alignEnd="@+id/editText"
         android:layout_alignTop="@+id/button"
         android:layout_marginRight="-50dp"
-        android:text="@string/rep2" />
+        android:text="@string/rep2"
+        android:onClick="onClick"/>
 
     <Button
         android:id="@+id/button3"
@@ -49,7 +51,8 @@
         android:layout_alignStart="@+id/button"
         android:layout_below="@+id/button"
         android:layout_marginTop="10dp"
-        android:text="@string/rep3" />
+        android:text="@string/rep3"
+        android:onClick="onClick"/>
 
     <Button
         android:id="@+id/button4"
@@ -57,5 +60,6 @@
         android:layout_height="150dp"
         android:layout_alignStart="@+id/button2"
         android:layout_alignTop="@+id/button3"
-        android:text="@string/rep4" />
+        android:text="@string/rep4"
+        android:onClick="onClick"/>
 </RelativeLayout>
